[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5==2024.2",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-crispy-forms==2.1",
    "gunicorn==21.2.0",
    "pillow==10.2.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "whitenoise==6.6.0",
]
